2007-02-25  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_text.cpp: fixed ~edit_text_character()
	on_event(event_id::KILLFOCUS) bug
	* gameswf/gameswf_button.cpp: a bit cleanup
	
2007-02-24  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_text.cpp,
	* gameswf/gameswf_impl.(cpp,h),
	fixed KILL_FOCUS bug,
	We cannot use get_parent() because parent may not be any more
	
2007-02-24  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_action.(cpp,h),
	* gameswf/gameswf_impl.(cpp,h),
	* gameswf/gameswf.h,
	* gameswf/gameswf_test_ogl.cpp:
	key object is moved to own files, 
	I do not see the sense to send key events to inactive movies
	in multifile games therefore notify_key_event() is moved to
	movie_root 
	* gameswf/win32/VC8/gameswf.vcproj: added as_key(cpp,h)

2007-02-23  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_video_base(cpp,h),
	* gameswf/gameswf_video_ogl.cpp: tabs & cleanup
	
2007-02-23  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_action.cpp,
	* gameswf/gameswf_classes/as_sound(cpp,h): sound object is moved to
	own files
	* gameswf/win32/VC8/gameswf.vcproj: added as_sound(cpp,h)
	
2007-02-23  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf.h: fixed tu_float
	* gameswf/gameswf_test_ogl: the cleanup

2007-02-23  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_impl(cpp,h): added 
	virtual bool can_handle_mouse_event(), 	fixed mouse event bug
	* gameswf/gameswf_text.cpp,
	* gameswf/gameswf_button.cpp: added can_handle_mouse_event() method
	* gameswf/gameswf_action.cpp:  a bit cleanup of get_variable_raw()
	
2007-02-23  Vitaly Alexeev <tishka92@yahoo.com>

	* base/utility.h,
	* gameswf/gameswf_types(cpp,h),
	* gameswf/gameswf_impl.cpp,
	* gameswf/gameswf_button.cpp,
	* gameswf/gameswf.h: 
	removed infinite_to_fzero() & added "struct tu_float"
	because it's more convenient and better 

2007-02-22  Vitaly Alexeev <tishka92@yahoo.com>

	* base/utility.h: added "float infinite_to_fzero(float f)" because